--- a/api/tests/integration/photos/predictions/create.tavern.yml
+++ b/api/tests/integration/photos/predictions/create.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - api_live_url
     - endpoint
-    - token_user_can_add
+    - jwt_token_user_can_add
     - app_user_token
 
 stages:
@@ -31,7 +31,7 @@ stages:
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Token {token_user_can_add}"
+        Authorization: "Bearer {jwt_token_user_can_add}"
       method: "POST"
     response:
       status_code: 405
