--- a/api/tests/integration/photos/predictions/get.tavern.yml
+++ b/api/tests/integration/photos/predictions/get.tavern.yml
@@ -10,7 +10,7 @@ marks:
     - api_live_url
     - endpoint
     - photo_prediction
-    - token_user
+    - jwt_token_user
     - app_user_token
 
 stages:
@@ -33,7 +33,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 200
       json: !force_format_include "{response_data_validation}"
