Added nested endpoint for predictions. (#261)
* Added nested endpoint for photo predictions.

* Fix _get_image_dimensions

* WIP

* Add validation_type

* Allow filter by result source

* Do not show decisive predicted reports on coarse filter

* Show prediction label in the photos

* Fixed tests

* Test users without permission can not update

* Tests users with permission can not create

* Fix test description

* Added user_uuid in identification_task.obsevation

* Use Bearer instead of Token

* Fix tests

* Set insect prediction float range from 0 to 1

* Fix showing insect confidence needs select related

* Changes in_coarse_filter to not depend on photopredictions

* Add uncertainty for photoprediction

* Added PhotoPrediction inline admin

* Raise ValidationError is is_decisive but no taxon set

* Populate result_source

* Raise ValidationError if all scores are 0

* Validation non-zero scores only when is_decisive is True

* Ensure taxon is loaded before clean

* Bugfix: all fields must be tuple

* Added result_source filter

* Added more classifier version for 2025

* not_sure is not set to Insecta

* Fix test failing missing taxon

--- a/api/tests/integration/identification_tasks/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/list.tavern.yml
@@ -114,3 +114,54 @@ stages:
         results:
           - observation:
               uuid: "{archived_identification_task.report.pk}"
+
+
+---
+
+test_name: 'Filters for identification task list fully_predicted'
+
+includes:
+  - !include 'schema.yml'
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - jwt_token_user_can_view
+    - identification_task_fully_predicted
+    - identification_task_with_pending_predictions
+
+stages:
+  - name: Filter by fully_predicted True
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      params:
+        fully_predicted: True
+      headers:
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
+    response:
+      status_code: 200
+      strict:
+        - json:off
+      json:
+        count: 1
+        results:
+          - observation:
+              uuid: "{identification_task_fully_predicted.pk}"
+  - name: Filter by fully_predicted False
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      params:
+        fully_predicted: False
+      headers:
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
+    response:
+      status_code: 200
+      strict:
+        - json:off
+      json:
+        count: 1
+        results:
+          - observation:
+              uuid: "{identification_task_with_pending_predictions.pk}"
