--- a/api/tests/integration/identification_tasks/assignments/next.tavern.yml
+++ b/api/tests/integration/identification_tasks/assignments/next.tavern.yml
@@ -1,6 +1,6 @@
 ---
 
-test_name: New identification tasks assignations can not be created by not regular users with permissions.
+test_name: New identification tasks assignments can not be created by not regular users with permissions.
 
 includes:
   - !include schema.yml
@@ -13,9 +13,9 @@ marks:
     - jwt_token_user
 
 stages:
-  - name: Assignation is not allowed for mobile users
+  - name: Assignment is not allowed for mobile users
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       headers:
         Authorization: "Bearer {app_user_token}"
       method: "POST"
@@ -23,13 +23,13 @@ stages:
       status_code: 403
   - name: Non auth user can not assign new identification tasks.
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       method: "POST"
     response:
       status_code: 401
   - name: User without perm can not assign new identification tasks.
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       method: "POST"
       headers:
         Authorization: "Bearer {jwt_token_user:s}"
@@ -38,7 +38,7 @@ stages:
 
 ---
 
-test_name: Identification tasks assignations can be made only by authenticated users with permissions.
+test_name: Identification tasks assignments can be made only by authenticated users with permissions.
 
 includes:
   - !include schema.yml
@@ -53,48 +53,13 @@ marks:
 stages:
   - name: User with perm can assign new identification tasks.
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       method: "POST"
       headers:
         Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 201
       json: !force_format_include "{response_data_validation}"
-
----
-
-test_name: Ensure user is in assignments
-
-includes:
-  - !include schema.yml
-
-marks:
-  - usefixtures:
-    - api_live_url
-    - identification_task
-    - jwt_token_user
-    - perm_user_can_add_annotations
-
-stages:
-  - name: User with perm can assign new identification tasks.
-    request:
-      url: "{api_live_url}/{endpoint}/assign/"
-      method: "POST"
-      headers:
-        Authorization: "Bearer {jwt_token_user:s}"
-    response:
-      status_code: 201
-      strict:
-        - json:off
-      json: 
-        assignments:
-          - user:
-              id: !int "{user.pk}"
-              username: "{user.username}"
-              first_name: "{user.first_name}"
-              last_name: "{user.last_name}"
-              full_name: "{user.first_name} {user.last_name}"
-            annotation_id: null
 
 ---
 
@@ -114,7 +79,7 @@ marks:
 stages:
   - name: User with perm can assign new identification tasks.
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       method: "POST"
       headers:
         Authorization: "Bearer {jwt_token_user:s}"
@@ -142,7 +107,7 @@ marks:
 stages:
   - name: User with perm can assign new identification tasks.
     request:
-      url: "{api_live_url}/{endpoint}/assign/"
+      url: "{api_live_url}/{endpoint}/next/"
       method: "POST"
       headers:
         Authorization: "Bearer {jwt_token_user:s}"
