--- a/api/tests/integration/identification_tasks/predictions/get.tavern.yml
+++ b/api/tests/integration/identification_tasks/predictions/get.tavern.yml
@@ -1,6 +1,6 @@
 ---
 
-test_name: Predictions can be read only by authenticated users.
+test_name: Predictions can be read by users not authenticated or without permissions.
 
 includes:
   - !include schema.yml
@@ -28,7 +28,57 @@ stages:
       method: "GET"
     response:
       status_code: 401
-  - name: User without perm view can retrieve
+  - name: User without perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/{photo_prediction.photo.uuid}/"
+      method: "GET"
+      headers:
+        Authorization: "Bearer {jwt_token_user:s}"
+    response:
+      status_code: 403
+
+---
+
+test_name: Predictions can be read only by authenticated users with permissions.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - photo_prediction
+    - jwt_token_user_can_view
+
+stages:
+  - name: User without perm view can not retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/{photo_prediction.photo.uuid}/"
+      method: "GET"
+      headers:
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
+    response:
+      status_code: 200
+      json: !force_format_include "{response_data_validation}"
+
+---
+
+test_name: Photo prediction can be retrieved by users without permissions if from a identification task they have annotate.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - annotation
+    - photo_prediction
+    - jwt_token_user
+
+stages:
+  - name: User without perm view can retrieve if annotation from the same task
     request:
       url: "{api_live_url}/{endpoint}/{photo_prediction.photo.uuid}/"
       method: "GET"
