Make identification task attribute able on list if user has annotated on task

--- a/api/tests/integration/identification_tasks/annotations/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/annotations/list.tavern.yml
@@ -58,3 +58,28 @@ stages:
     response:
       status_code: 200
       json: !force_format_include "{response_list_data_validation}"
+
+---
+
+test_name: Annotation can be lsit by users without permissions if from a identification task they have annotate.
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - annotation
+    - jwt_token_user
+
+stages:
+  - name: User without perm view can retrieve if annotation from the same task
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      headers:
+        Authorization: "Bearer {jwt_token_user:s}"
+    response:
+      status_code: 200
+      json: !force_format_include "{response_list_data_validation}"
