--- a/api/tests/integration/identification_tasks/annotations/create.tavern.yml
+++ b/api/tests/integration/identification_tasks/annotations/create.tavern.yml
@@ -69,7 +69,7 @@ stages:
         id: !anyint
         observation_uuid: "{identification_task.report.pk}"
         user:
-          id: !int "{user.pk}"
+          uuid: !re_fullmatch "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
           username: "{user.username}"
           first_name: "{user.first_name}"
           last_name: "{user.last_name}"
@@ -133,7 +133,7 @@ stages:
         id: !anyint
         observation_uuid: "{identification_task.report.pk}"
         user:
-          id: !int "{user.pk}"
+          uuid: !re_fullmatch "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
           username: "{user.username}"
           first_name: "{user.first_name}"
           last_name: "{user.last_name}"
